syntax = "proto3";
package zkpVerification;

service ZKPVerificationService{

    rpc AddClauseInclusionCommitment(AddClauseInclusionCommitmentRequest) returns (AddClauseInclusionCommitmentResponse);
    rpc VerifyClauseInclusion(VerifyClauseInclusionRequest) returns (VerifyClauseInclusionResponse);
    rpc AddBGExpiry(AddBGExpiryRequest) returns (AddBGExpiryResponse);
    rpc BGExpiryCheck(BGExpiryCheckRequest) returns (BGExpiryCheckResponse);
    rpc AddAmountWithRangeCommitment(AddAmountWithRangeCommitmentRequest) returns (AddAmountWithRangeCommitmentResponse);
    rpc AmountWithinRange(AmountWithinRangeRequest) returns(AmountWithinRangeResponse);

}

message AddClauseInclusionCommitmentRequest{

    string agreementId = 1;
    string clauseSetHash = 2;

}

message AddClauseInclusionCommitmentResponse{

    bool success = 1;
    string message = 2;
    string commitment = 3;
    string txHash = 4;

}


message VerifyClauseInclusionRequest{

    string agreementId = 1;
    string clauseSetHash = 2;
    string commitment = 3;

}

message VerifyClauseInclusionResponse{

    bool success = 1;
    string message = 2;
    bool isValid = 3;

}

message AddBGExpiryRequest{

    string bgExpiry = 1;
    string POenddate = 2;
    string Ndays = 3;
    string bgId = 4;

}

message AddBGExpiryResponse{

    bool success = 1;
    string message = 2;
    string commitment = 3;
    string txHash = 4;


}

message BGExpiryCheckRequest{

    string bgExpiry = 1; 
    string POEndDate = 2;
    string NDays = 3;
    string bgExpiryHash = 4; 

}

message BGExpiryCheckResponse{

    bool success = 1;
    string message = 2;
    bool isValid = 3;


}

message AddAmountWithRangeCommitmentRequest{

    string invoiceTotal = 1;
    string poBalance = 2;
    string id = 3;

}

message AddAmountWithRangeCommitmentResponse{

    bool success = 1;
    string message = 2;
    string commitment = 3;
    string txHash = 4;


}

message AmountWithinRangeRequest{

    string invoiceTotal = 1;
    string poBalance = 2;
    string poBalanceHash = 3;

}

message AmountWithinRangeResponse{

    bool success = 1;
    string message = 2;
    bool isValid = 3;

}



/*

protoc \
  -I ${PWD}/proto \
  --plugin=protoc-gen-ts=./node_modules/.bin/protoc-gen-ts_proto \
  --ts_out="esModuleInterop=true,outputServices=grpc-js,outputClientImpl=true,forceLong=false,useOptionals=true:${PWD}/src/protoOutput" \
  ${PWD}/proto/zkpVerification.proto

*/